--- a/.github/actions/code-coverage/action.yml
+++ b/.github/actions/code-coverage/action.yml
@@ -22,5 +22,6 @@ runs:
     - name: Codecov Upload
       uses: codecov/codecov-action@v3
       with:
-        files: ${{ runner.temp }}/codecoverage/coverage.cobertura.xml
+        files: coverage.cobertura.xml
         fail_ci_if_error: true
+        working-directory: ${{ runner.temp }}/codecoverage
