--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,10 +11,14 @@
     <PackageVersion Include="Grpc.Core.Api" Version="2.57.0" />
     <PackageVersion Include="Grpc.Tools" Version="2.58.0" />
     <PackageVersion Include="KubernetesClient" Version="12.0.16" />
+    <PackageVersion Include="Microsoft.Azure.DurableTask.AzureStorage" Version="1.15.0" />
+    <PackageVersion Include="Microsoft.Azure.Functions.Worker" Version="1.19.0" />
+    <PackageVersion Include="Microsoft.Azure.Functions.Worker.Extensions.DurableTask" Version="1.0.3" />
+    <PackageVersion Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.1.0" />
+    <PackageVersion Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.14.1" />
     <PackageVersion Include="Microsoft.Azure.WebJobs.Core" Version="3.0.37" />
-    <PackageVersion Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.11.3" />
-    <PackageVersion Include="Microsoft.Azure.WebJobs.Extensions.DurableTask.Analyzers" Version="0.5.0" />
-    <PackageVersion Include="Microsoft.Azure.WebJobs.Extensions.Http" Version="3.2.0" />
+    <PackageVersion Include="Microsoft.DurableTask.Client" Version="1.0.3" />
+    <PackageVersion Include="Microsoft.DurableTask.Client.OrchestrationServiceClientShim" Version="1.0.3" />
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
@@ -31,6 +35,7 @@
     <PackageVersion Include="Moq" Version="4.20.69" />
     <PackageVersion Include="MSTest.TestAdapter" Version="3.1.1" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.1.1" />
+    <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
