--- a/tests/Keda.Scaler.Functions.Worker.DurableTask.Examples/Keda.Scaler.Functions.Worker.DurableTask.Examples.csproj
+++ b/tests/Keda.Scaler.Functions.Worker.DurableTask.Examples/Keda.Scaler.Functions.Worker.DurableTask.Examples.csproj
@@ -4,7 +4,7 @@
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerFastModeProjectMountDirectory>/home/site/wwwroot</DockerFastModeProjectMountDirectory>
-    <DockerfileContext>$(RootDirectory)</DockerfileContext>
+    <DockerfileContext>..\..</DockerfileContext>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
