Fix dockerfile build

--- a/tests/Keda.Scaler.Functions.Worker.DurableTask.Examples/Dockerfile
+++ b/tests/Keda.Scaler.Functions.Worker.DurableTask.Examples/Dockerfile
@@ -11,10 +11,17 @@ FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "Keda.Scaler.Functions.Worker.DurableTask.Examples.csproj" -c $BUILD_CONFIGURATION -warnaserror -o /app/publish /p:UseAppHost=false
 
-FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated7.0-mariner@sha:7cbee2636453d9e7f5ed8865ced5576f643a3e267cc1c8b25e58b2e7f01fb57f AS runtime
+FROM mcr.microsoft.com/dotnet/sdk:7.0.403-cbl-mariner2.0-amd64@sha256:83c3157e64da025c69b0c53e0a5bfc73c0364c4e31c3ae11e489946d2dcca439 AS users
 RUN groupadd nonroot -g 2000 && \
-    useradd -r -M -s /sbin/nologin -g nonroot -c nonroot nonroot -u 1000 && \
-    chown -R nonroot:nonroot /azure-functions-host
+    useradd -r -M -s /sbin/nologin -g nonroot -c nonroot nonroot -u 1000
+
+FROM scratch AS nonroot
+COPY --from=users /etc/group /etc/group
+COPY --from=users /etc/passwd /etc/passwd
+
+FROM mcr.microsoft.com/azure-functions/dotnet-isolated:4-dotnet-isolated7.0-mariner@sha256:7cbee2636453d9e7f5ed8865ced5576f643a3e267cc1c8b25e58b2e7f01fb57f AS runtime
+COPY --from=nonroot / /
+RUN chown -R nonroot:nonroot /azure-functions-host
 ENV ASPNETCORE_URLS=http://+:8080 \
     AzureFunctionsJobHost__FileWatchingEnabled=false \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true \
