--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,16 +5,20 @@
     <PackageVersion Include="Azure.Storage.Blobs" Version="12.19.1" />
     <PackageVersion Include="Azure.Storage.Queues" Version="12.17.1" />
     <PackageVersion Include="coverlet.collector" Version="6.0.0" />
-    <PackageVersion Include="Google.Protobuf" Version="3.25.0" />
+    <PackageVersion Include="Google.Protobuf" Version="3.25.1" />
     <PackageVersion Include="Grpc.AspNetCore.Server" Version="2.59.0" />
     <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.59.0" />
     <PackageVersion Include="Grpc.Core.Api" Version="2.59.0" />
     <PackageVersion Include="Grpc.Tools" Version="2.59.0" />
     <PackageVersion Include="KubernetesClient" Version="12.1.1" />
-    <PackageVersion Include="Microsoft.Azure.WebJobs.Core" Version="3.0.39" />
-    <PackageVersion Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="2.13.0" />
-    <PackageVersion Include="Microsoft.Azure.WebJobs.Extensions.DurableTask.Analyzers" Version="0.5.0" />
-    <PackageVersion Include="Microsoft.Azure.WebJobs.Extensions.Http" Version="3.2.0" />
+    <PackageVersion Include="Microsoft.Azure.DurableTask.AzureStorage" Version="1.17.0" />
+    <PackageVersion Include="Microsoft.Azure.Functions.Worker" Version="1.20.0" />
+    <PackageVersion Include="Microsoft.Azure.Functions.Worker.Extensions.DurableTask" Version="1.1.0" />
+    <PackageVersion Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.1.0" />
+    <PackageVersion Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.16.2" />
+    <PackageVersion Include="Microsoft.Azure.WebJobs.Core" Version="3.0.37" />
+    <PackageVersion Include="Microsoft.DurableTask.Client" Version="1.1.0" />
+    <PackageVersion Include="Microsoft.DurableTask.Client.OrchestrationServiceClientShim" Version="1.0.5" />
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
@@ -31,6 +35,7 @@
     <PackageVersion Include="Moq" Version="4.20.69" />
     <PackageVersion Include="MSTest.TestAdapter" Version="3.1.1" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.1.1" />
+    <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
