--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,6 +11,7 @@
     <PackageVersion Include="Grpc.Core.Api" Version="2.59.0" />
     <PackageVersion Include="Grpc.Tools" Version="2.59.0" />
     <PackageVersion Include="KubernetesClient" Version="12.1.1" />
+    <PackageVersion Include="Microsoft.AspNetCore.Authentication.Certificate" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Azure.DurableTask.AzureStorage" Version="1.17.0" />
     <PackageVersion Include="Microsoft.Azure.Functions.Worker" Version="1.20.0" />
     <PackageVersion Include="Microsoft.Azure.Functions.Worker.Extensions.DurableTask" Version="1.1.0" />
