--- a/.github/actions/helm-test/action.yml
+++ b/.github/actions/helm-test/action.yml
@@ -91,7 +91,6 @@ runs:
 
         kubectl create secret tls self-signed-ca \
           -n keda \
-          --key=${{ runner.temp }}/certs/root.key \
           --cert=${{ runner.temp }}/certs/root.pem
 
         # Create a client TLS certificate for KEDA
@@ -187,7 +186,7 @@ runs:
           --create-namespace \
           --set image.repository=${{ inputs.scalerImageRepository }} \
           --set image.tag=${{ inputs.imageTag }} \
-          --set tls.caSecret=ca-tls \
+          --set tls.caSecret=self-signed-ca \
           --set tls.secret=server-tls \
           --wait \
           --timeout 30s \
