--- a/.github/actions/helm-test/action.yml
+++ b/.github/actions/helm-test/action.yml
@@ -91,7 +91,8 @@ runs:
 
         kubectl create secret tls self-signed-ca \
           -n keda \
-          --cert=${{ runner.temp }}/certs/root.pem
+          --cert=${{ runner.temp }}/certs/root.pem \
+          --key=${{ runner.temp }}/certs/root.key
 
         # Create a client TLS certificate for KEDA
         printf "basicConstraints=CA:FALSE\nsubjectAltName=DNS:keda-operator.keda\n" >> ${{ runner.temp }}/certs/client.ext
