--- a/src/Keda.Scaler.DurableTask.AzureStorage/appsettings.json
+++ b/src/Keda.Scaler.DurableTask.AzureStorage/appsettings.json
@@ -7,13 +7,13 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
     },
     "Console": {
       "FormatterName": "systemd",
       "FormatterOptions": {
-        "IncludeScopes": true,
+        "IncludeScopes": false,
+        "SingleLine": true,
         "TimestampFormat": "O",
         "UseUtcTimestamp": true
       }
