Refactor certificate monitor

--- a/.globalconfig
+++ b/.globalconfig
@@ -420,7 +420,7 @@ csharp_style_expression_bodied_accessors       = when_on_single_line
 csharp_style_expression_bodied_constructors    = when_on_single_line
 csharp_style_expression_bodied_indexers        = when_on_single_line
 csharp_style_expression_bodied_lambdas         = when_on_single_line
-csharp_style_expression_bodied_local_functions = false
+csharp_style_expression_bodied_local_functions = when_on_single_line
 csharp_style_expression_bodied_methods         = when_on_single_line
 csharp_style_expression_bodied_operators       = when_on_single_line
 csharp_style_expression_bodied_properties      = when_on_single_line
