--- a/src/Keda.Scaler.DurableTask.AzureStorage/appsettings.json
+++ b/src/Keda.Scaler.DurableTask.AzureStorage/appsettings.json
@@ -18,5 +18,16 @@
         "UseUtcTimestamp": true
       }
     }
+  },
+  "Security": {
+    "Transport": {
+      "Client": {
+        "Authentication": {
+          "Caching": {
+            "CacheEntryExpiration": "00:05:00"
+          }
+        }
+      }
+    }
   }
 }
